// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`component census of the micro-documents > answer when $mi=x 1`] = `
{
  "attributeComponents": 0,
  "byType": {
    "_ref": 1,
    "answer": 1,
    "award": 1,
    "document": 1,
    "mathInput": 1,
    "when": 1,
  },
  "components": 6,
  "copies": 0,
  "dependencies": 507,
  "shadows": 0,
  "stateVariables": 392,
  "stateVariablesResolved": 259,
}
`;

exports[`component census of the micro-documents > collect numbers x4 1`] = `
{
  "attributeComponents": 0,
  "byType": {
    "_collectList": 1,
    "_copy": 1,
    "_dynamicChildren": 1,
    "document": 1,
    "number": 4,
    "p": 1,
    "section": 1,
  },
  "components": 10,
  "copies": 1,
  "dependencies": 804,
  "shadows": 0,
  "stateVariables": 559,
  "stateVariablesResolved": 345,
}
`;

exports[`component census of the micro-documents > inline $n 1`] = `
{
  "attributeComponents": 0,
  "byType": {
    "_ref": 1,
    "document": 1,
    "number": 1,
  },
  "components": 3,
  "copies": 0,
  "dependencies": 216,
  "shadows": 0,
  "stateVariables": 131,
  "stateVariablesResolved": 95,
}
`;

exports[`component census of the micro-documents > math displayDigits=$n 1`] = `
{
  "attributeComponents": 1,
  "byType": {
    "_ref": 1,
    "document": 1,
    "integer": 1,
    "math": 1,
    "number": 1,
  },
  "components": 5,
  "copies": 0,
  "dependencies": 300,
  "shadows": 0,
  "stateVariables": 240,
  "stateVariablesResolved": 127,
}
`;

exports[`component census of the micro-documents > math displayDigits=5 1`] = `
{
  "attributeComponents": 1,
  "byType": {
    "document": 1,
    "integer": 1,
    "math": 1,
    "number": 1,
  },
  "components": 4,
  "copies": 0,
  "dependencies": 294,
  "shadows": 0,
  "stateVariables": 228,
  "stateVariablesResolved": 121,
}
`;

exports[`component census of the micro-documents > number $n+1 1`] = `
{
  "attributeComponents": 0,
  "byType": {
    "_ref": 1,
    "document": 1,
    "math": 1,
    "number": 2,
  },
  "components": 5,
  "copies": 0,
  "dependencies": 342,
  "shadows": 0,
  "stateVariables": 244,
  "stateVariablesResolved": 147,
}
`;

exports[`component census of the micro-documents > number 2$mi 1`] = `
{
  "attributeComponents": 0,
  "byType": {
    "_ref": 1,
    "document": 1,
    "math": 2,
    "mathInput": 1,
    "number": 1,
  },
  "components": 6,
  "copies": 0,
  "dependencies": 461,
  "shadows": 0,
  "stateVariables": 362,
  "stateVariablesResolved": 208,
}
`;

exports[`component census of the micro-documents > number alone 1`] = `
{
  "attributeComponents": 0,
  "byType": {
    "document": 1,
    "number": 1,
  },
  "components": 2,
  "copies": 0,
  "dependencies": 172,
  "shadows": 0,
  "stateVariables": 107,
  "stateVariablesResolved": 76,
}
`;

exports[`component census of the micro-documents > number extend=$n 1`] = `
{
  "attributeComponents": 0,
  "byType": {
    "_copy": 1,
    "document": 1,
    "number": 2,
  },
  "components": 4,
  "copies": 1,
  "dependencies": 319,
  "shadows": 1,
  "stateVariables": 193,
  "stateVariablesResolved": 135,
}
`;

exports[`component census of the micro-documents > numberList $l[1] 1`] = `
{
  "attributeComponents": 0,
  "byType": {
    "_ref": 1,
    "document": 1,
    "number": 1,
    "numberList": 1,
  },
  "components": 4,
  "copies": 0,
  "dependencies": 336,
  "shadows": 0,
  "stateVariables": 214,
  "stateVariablesResolved": 144,
}
`;

exports[`component census of the micro-documents > point $P 1`] = `
{
  "attributeComponents": 1,
  "byType": {
    "_copy": 1,
    "_dynamicChildren": 2,
    "document": 1,
    "graph": 2,
    "math": 2,
    "mathList": 1,
    "point": 2,
  },
  "components": 11,
  "copies": 1,
  "dependencies": 783,
  "shadows": 1,
  "stateVariables": 688,
  "stateVariablesResolved": 366,
}
`;

exports[`component census of the micro-documents > point $P.x 1`] = `
{
  "attributeComponents": 1,
  "byType": {
    "_dynamicChildren": 1,
    "_ref": 1,
    "document": 1,
    "graph": 1,
    "math": 2,
    "mathList": 1,
    "p": 1,
    "point": 1,
  },
  "components": 9,
  "copies": 0,
  "dependencies": 583,
  "shadows": 0,
  "stateVariables": 542,
  "stateVariablesResolved": 273,
}
`;

exports[`component census of the micro-documents > repeatForSequence $i^2 x4 1`] = `
{
  "attributeComponents": 2,
  "byType": {
    "_componentWithSelectableType": 2,
    "_ref": 4,
    "_repeatValues": 1,
    "document": 1,
    "group": 4,
    "math": 4,
    "number": 6,
    "repeatForSequence": 1,
  },
  "components": 23,
  "copies": 0,
  "dependencies": 1059,
  "shadows": 0,
  "stateVariables": 936,
  "stateVariablesResolved": 461,
}
`;

exports[`component census of the micro-documents > repeatForSequence literal x4 1`] = `
{
  "attributeComponents": 2,
  "byType": {
    "_componentWithSelectableType": 2,
    "document": 1,
    "group": 4,
    "number": 6,
    "repeatForSequence": 1,
  },
  "components": 14,
  "copies": 0,
  "dependencies": 665,
  "shadows": 0,
  "stateVariables": 524,
  "stateVariablesResolved": 282,
}
`;

exports[`component census of the micro-documents > shuffle literal x4 1`] = `
{
  "attributeComponents": 0,
  "byType": {
    "_shuffleList": 1,
    "document": 1,
    "p": 1,
  },
  "components": 3,
  "copies": 0,
  "dependencies": 301,
  "shadows": 0,
  "stateVariables": 202,
  "stateVariablesResolved": 140,
}
`;

exports[`component census of the micro-documents > sort $l of 4 1`] = `
{
  "attributeComponents": 0,
  "byType": {
    "_copy": 1,
    "_sortList": 1,
    "document": 1,
    "numberList": 2,
    "p": 1,
  },
  "components": 6,
  "copies": 1,
  "dependencies": 509,
  "shadows": 1,
  "stateVariables": 390,
  "stateVariablesResolved": 227,
}
`;
